<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Minimal Home</string>
    <string name="search_hint">Search apps and files</string>
    <string name="no_apps_found">No apps found</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="background_settings">Background</string>
    <string name="background_color">Background Color</string>
    <string name="clock_app">Clock App</string>
    <string name="calendar_app">Calendar App</string>
    <string name="notion_settings">Notion Calendar</string>
    <string name="notion_api_key">Notion API Key</string>
    <string name="notion_database_id">Notion Database ID</string>
    <string name="select_app">Select App</string>
    <string name="no_events">No upcoming events</string>
    <string name="choose_color">Choose Background Color</string>
</resources>
